portfolio/src/app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

.hero__title {
  @apply text-[72px] sm:text-[64px] text-[50px] font-extrabold;
}
.contact-card {
  background-color: #f2f9ff; /* Background color of the card */
  border-radius: 10px; /* Adjust the border-radius to control the roundness of the corners */
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Inset shadow for the "under shadow" effect */
  /* Padding and margin for better spacing */
  padding: 5px;
  margin: 20px 0;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Manrope", sans-serif;

}
.bullet-title{
  @apply text-[27px] font-extrabold;
}
.bullet-p {
  @apply text-[27px] font-medium;
}
.about-menu-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.about-menu {
  border-radius: 30px;
  display: flex;
  background-color: lightblue;
  padding: 20px;
  width: 90%;
  justify-content: center;
  align-self: center;
}

.about-item {
  text-align: center;
  border-radius: 15px;
  justify-content: center;
  padding: 10px;
  font-weight: bold;
  background-color: #222;
  color: white;
  width: 100px;
}


.navbar {
  display: flex;
  background-color: #222;
  padding: 1rem;
  position: fixed;
  width: 100%;
  top: 0;
  z-index: 10;
  justify-content: flex-end; /* Align items to the right */
}

.nav-link {
  text-decoration: none;
  color: #fff;
  font-weight: bold;
  padding: 0.5rem;
  margin: 0;
}

.nav-link:hover {
  color: salmon;
}
.max-width {
  @apply max-w-[1440px] mx-auto;
}

.padding-x {
  @apply sm:px-16 px-6;
}

.padding-y {
  @apply py-4;
}

.flex-center {
  @apply flex items-center justify-center;
}

.flex-between {
  @apply flex justify-between items-center;
}

.hero {
  @apply flex xl:flex-row flex-col gap-5
  relative z-0 max-w-[1440px] mx-auto;
}
.hero__image-container {
  @apply xl:flex-[1.5] flex justify-end items-end w-full xl:h-screen z-10;
}

.hero__image {
  @apply relative xl:w-[80%] w-[70%] xl:h-full h-[590px] z-10;
}

.hero__title {
  @apply text-[72px] sm:text-[64px] text-[50px] font-extrabold mt-8;
}
.hero__title2 {
  @apply text-[50px] sm:text-[42px] text-[28px] font-extrabold mt-8;
}

.hero__subtitle {
  @apply text-[27px] font-light;
}

